# mobi-pc-server

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.en.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: devices.py  llama_cpp.py  logs.py  mnn.py  mobiinfer.py  mobile.py  models.py  runtime.py
backend/app/core/: paths.py
backend/app/legacy/: harmony_agent.py  hdc_server.py  serve_model.py
backend/app/legacy/prompts/: e2e_v2.md  e2e_v2_agent_prefix.md  e2e_v2_agent_prefix_noreason.md  e2e_v2_agent_variable.md  e2e_v2_agent_variable_noreason.md  planner.md  planner_oneshot_harmony.md
backend/app/legacy/wechat_collect/: __init__.py  cli.py  collector.py  config.py  device.py  parser.py  render.py  service.py
backend/app/legacy/wechat_collect/fixtures/: chat_xiao_zhao.json  history_009.json  history_010.json  home.json
backend/app/schemas/: devices.py  mnn.py  models.py  runtime.py
backend/app/services/: hdc.py  llama_cpp_server.py  logs.py  mnn_server.py  mobile_events.py  modelscope.py  runtime_server.py  runtime_state.py
backend/tests/: test_hdc_path.py  test_hdc_rport.py  test_legacy_app_start.py  test_llama_cpp_server.py  test_modelscope_download_progress.py  test_qwen35_gpu_benchmark.py  test_runtime_error_messages.py  test_runtime_images.py
configs/: models.json
desktop/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
docs/: build.md  desktop-data.md  eagle-debug-plan.md  frontend-design.md  hdc.md  llama-cpp.md  mnn.md  mobiinfer.md  modelscope.md  multimodal-tests.md  (+4 more)
(+113 files in other folders)
