[project]
name = "pc-server-backend"
version = "0.2.0"
description = "Local backend for controlling local inference runtimes, ModelScope downloads, and hdc devices."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "hmdriver2>=1.1.0",
  "modelscope>=1.18.0",
  "Pillow>=10.0.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
markers = [
  "benchmark: GPU inference benchmark tests that require running local model servers"
]
